@@ -1,5 +1,7 @@
 package fr.xebia.mowitnow.io.parseur;
 
+import static com.google.common.base.Preconditions.checkArgument;
+
 import java.util.List;
 
 import lombok.RequiredArgsConstructor;
@@ -7,9 +9,8 @@ import lombok.RequiredArgsConstructor;
 import com.google.common.base.Splitter;
 
 import fr.xebia.mowitnow.base.Orientation;
-import fr.xebia.mowitnow.jardin.Pelouse;
+import fr.xebia.mowitnow.tonte.Pelouse;
 import fr.xebia.mowitnow.tonte.Tondeuse;
-import static com.google.common.base.Preconditions.checkArgument;
 
 @RequiredArgsConstructor
 public class TondeuseParseur implements Parseur<String, Tondeuse> {
@@ -25,8 +26,8 @@ public class TondeuseParseur implements Parseur<String, Tondeuse> {
         "Erreur de parse des infos de la tondeuse [attendue: 'x y Orientaion'; actuelle: '"
             + source + "']");
     List<String> champs = Splitter.on(SEPARATOR).splitToList(source);
-    int x = new Integer(champs.get(0));
-    int y = new Integer(champs.get(1));
+    int x = Integer.valueOf(champs.get(0));
+    int y = Integer.valueOf(champs.get(1));
     Orientation orientation = Orientation.parCode(champs.get(2));
     return new Tondeuse(pelouse.cellule(x, y), orientation);
   }
